--- a/settings.json
+++ b/settings.json
@@ -4,7 +4,7 @@
         "dpi_aware": true
     },
     "debugging": {
-        "show_console": true,
+        "show_console": false,
         "subprocess_show_console": false,
         "log_level": "DEBUG4",
         "log_file": "debug.log"
@@ -12,7 +12,7 @@
     "main_window": {
         "title": "PHP Desktop Chrome",
         "icon": "",
-        "default_size": [800, 600],
+        "default_size": [900, 700],
         "minimum_size": [640, 480],
         "maximum_size": [0, 0],
         "disable_maximize_button": false,
