--- a/settings.json
+++ b/settings.json
@@ -10,14 +10,14 @@
         "log_file": "debug.log"
     },
     "main_window": {
-        "title": "PHP Desktop Chrome",
+        "title": "CLASSROOM MANAGEMENT",
         "icon": "",
         "default_size": [900, 700],
         "minimum_size": [640, 480],
         "maximum_size": [0, 0],
         "disable_maximize_button": false,
         "center_on_screen": true,
-        "start_maximized": false,
+        "start_maximized": true,
         "start_fullscreen": false,
         "always_on_top": false,
         "minimize_to_tray": false,
