--- a/settings.json
+++ b/settings.json
@@ -17,7 +17,7 @@
         "maximum_size": [0, 0],
         "disable_maximize_button": false,
         "center_on_screen": true,
-        "start_maximized": false,
+        "start_maximized": true,
         "start_fullscreen": false,
         "always_on_top": false,
         "minimize_to_tray": false,
